--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.PaymentActivity"></activity>
-        <activity android:name=".activities.UploadItemActivity" />
+        <activity android:name=".activities.PaymentActivity"/>
+        <activity android:name=".activities.UploadItemActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".activities.ItemViewActivity" />
         <activity android:name=".activities.AccountActivity" />
         <activity android:name=".activities.HomeActivity" />
