--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.PaymentActivity"/>
-        <activity android:name=".activities.UploadItemActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.AccSettingsActivity"></activity>
+        <activity android:name=".activities.MyAdsActivity" />
+        <activity android:name=".activities.PaymentActivity" />
+        <activity
+            android:name=".activities.UploadItemActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".activities.ItemViewActivity" />
         <activity android:name=".activities.AccountActivity" />
-        <activity android:name=".activities.HomeActivity" >
+        <activity android:name=".activities.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +28,7 @@
         </activity>
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.WelcomeActivity"/>
+        <activity android:name=".activities.WelcomeActivity" />
         <activity android:name=".activities.BaseActivity" />
     </application>
 
