--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activities.AccSettingsActivity"></activity>
-        <activity android:name=".activities.MyAdsActivity" />
+        <activity android:name=".activities.MyItemsActivity" />
         <activity android:name=".activities.PaymentActivity" />
         <activity
             android:name=".activities.UploadItemActivity"
